# MHGLauncher

./: .env.example  .gitignore  AGENTS.md  README.md  debug-app.command  docker-compose.cloud.yml  docker-compose.yml  release-app.command  strict-review-findings.md
backend/: eslint.config.mjs  knip.json  next.config.ts  package-lock.json  package.json  pyproject.toml  server.ts  stryker.config.mjs  tsconfig.json  tsconfig.server.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.mutation.config.ts  vitest.performance.config.ts
backend/fixtures/: build.json  note.json  predownload.json  wishes.json
backend/performance/: game-integrity.test.ts
backend/tests/: achievement-resources.test.ts  api-contract.test.ts  api.test.ts  app-updates.test.ts  auth-risk.test.ts  cloud-sync-security.test.ts  concurrent-map.test.ts  config-security.test.ts  conftest.py  database.test.ts  disk-space.test.ts  download.test.ts  errors.test.ts  features.test.ts  file-allocation.test.ts  gacha-resource-fixture.ts  gacha-resources.test.ts  gacha-url-api.test.ts  game-account-registry.test.ts  game-auth-ticket.test.ts  game-compatibility.test.ts  game-install-resume.test.ts  game-integrity-bench.test.ts  game-integrity.test.ts  game-launch-process.test.ts  game-launch-run.test.ts  game-launch.test.ts  game-resource-install.test.ts  game-update-security.test.ts  game-wine-server.test.ts  game.test.ts  health.test.ts  helpers.ts  http-response.test.ts  image-resource-cache.test.ts  installer.test.ts  job-progress.test.ts  live-game-record.test.ts  note-live.test.ts  notifications.test.ts  (+34 more)
(+452 files in other folders)
