[project]
name = "mhglauncher-backend"
version = "0.1.0"
description = "MHGLauncher 本地后端"
requires-python = "==3.12.10"
dependencies = [
  "aiosqlite>=0.21,<1",
  "betterproto>=2.0.0b7,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.9,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.34,<1",
  "xxhash>=3.5,<4",
  "zstandard>=0.23,<1",
]

[dependency-groups]
dev = [
  "mypy>=1.16,<2",
  "pyinstaller>=6.14,<7",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mhglauncher"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001"]

[tool.ruff.lint.per-file-ignores]
"src/mhglauncher/providers/sophon_proto.py" = ["RUF009"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mhglauncher"]
